Updated topic.features, now it runs the whole feature normally